--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,24 +27,55 @@ html {
 		)
 		rgb(var(--background-start-rgb)); */
 	background-color: #333333;
-	background-image: url("../../public/raster.svg");
-	background-size: 150px 150px;
 	background-repeat: repeat;
 	background-attachment: fixed;
+	background-image: url("../../public/raster.svg");
+	background-size: 150px 150px;
 }
 
+@media screen and (max-width: 800px) {
+	html {
+		background-size: 300px 300px;
+		background-position: 45px;
+	}
+}
 
-#section-1{
+#section-1 {
 	background-color: #404040;
 	background-image: url("../../public/pattern.svg");
 	background-size: 1800px 1200px;
 	background-repeat: repeat;
 	background-attachment: fixed;
 	/* animation: moveIt 30s linear infinite; */
-}	
+}
 
 @keyframes moveIt {
-	from {background-position: bottom left;}
-	to {background-position: top right;}
-  }
+	from {
+		background-position: bottom left;
+	}
+	to {
+		background-position: top right;
+	}
+}
 
+@layer utilities {
+	@variants responsive {
+		/* Hide scrollbar for Chrome, Safari and Opera */
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		.no-scrollbar {
+			-ms-overflow-style: none; /* IE and Edge */
+			scrollbar-width: none; /* Firefox */
+		}
+	}
+}
+
+body{
+	scroll-snap-type: y mandatory;
+	height: 100vh;
+	width: 100vw;
+	overflow: auto;
+}
