--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,9 +73,10 @@ html {
 	}
 }
 
-body{
-	scroll-snap-type: y mandatory;
-	height: 100vh;
-	width: 100vw;
-	overflow: auto;
+
+body,
+html {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
