--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,22 @@
 	--background-end-rgb: 255, 255, 255;
 }
 
+
+@layer base {
+	.font-outline-1 {
+	  -webkit-text-stroke: 1px white;
+	}
+	.font-outline-2 {
+	  -webkit-text-stroke: 2px white;
+	}
+  .font-outline-3 {
+	  -webkit-text-stroke: 2px white;
+	}
+	.font-outline-4 {
+	  -webkit-text-stroke: 4px white;
+	}
+}
+
 @media (prefers-color-scheme: dark) {
 	:root {
 		--foreground-rgb: 255, 255, 255;
