--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,3 +97,7 @@ html {
 	background-image: url("../../public/raster.svg");
 	background-size: 150px 150px;
 } */
+
+.no-scrollbar::-webkit-scrollbar { 
+	display: none; 
+}
