i am going to stop this parallax thing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@ html {
 		/* Hide scrollbar for IE, Edge and Firefox */
 		.no-scrollbar {
 			-ms-overflow-style: none; /* IE and Edge */
-			scrollbar-width: none; /* Firefox */
+			scrollbar-width: none; /* Firefox */ 
 		}
 	}
 }
@@ -86,8 +86,8 @@ html {
 body,
 html {
   margin: 0;
-  height: 100%;
-  overflow: hidden;
+  /* height: 100%; */
+  overflow: auto;
 }
 
 /* 
