--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,7 @@ html {
 	background-color: #333333;
 	/* background-repeat: repeat; */
 	/* background-attachment: fixed; */
-	/* background-image: url("../../public/pattern.svg"); */
+	background-image: url("../../public/pattern.png");
 	
 }
 
