--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@ html {
 }
 
 @layer utilities {
-	@variants responsive {
+	@layer components {
 		/* Hide scrollbar for Chrome, Safari and Opera */
 		.no-scrollbar::-webkit-scrollbar {
 			display: none;
