--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,9 @@
 	.font-outline-1 {
 		-webkit-text-stroke: 1px white;
 	}
+	.font-outline-1-gray {
+		-webkit-text-stroke: 1px #5a5a5a;
+	}
 	.font-outline-2 {
 		-webkit-text-stroke: 2px white;
 	}
