--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,8 @@
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
 	--background-end-rgb: 255, 255, 255;
+	-webkit-text-stroke-width: 0px !important;
+	-webkit-font-smoothing: antialiased;
 }
 
 @layer base {
@@ -51,6 +53,7 @@ html {
 	width: 100%;
 	font-size: 10pt;
 	background-color: #3333;
+	-webkit-text-stroke-width: 0px !important;
 }
 
 .landing-bg {
@@ -157,5 +160,3 @@ body {
 	height: 100%;
 	margin: 0;
 }
-
-
