--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -160,3 +160,12 @@ body {
 	height: 100%;
 	margin: 0;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+.hide-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
