--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -159,7 +159,8 @@ html,
 body {
 	height: 100%;
 	margin: 0;
-	/* font-synthesis: none */
+	font-synthesis: none;
+	
 }
 
 .hide-scrollbar::-webkit-scrollbar {
