font fixes, providing a theme

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,7 +118,7 @@ body {
 }
 
 .impressum-text-styling > h1 {
-	font-family: var(--font-clash);
+	font-family: var(--font-inter);
 	color: theme("colors.neutral.100");
 	font-size: 2.4rem;
 	margin-top: 0.2rem;
@@ -127,7 +127,7 @@ body {
 }
 
 .impressum-text-styling > h2 {
-	font-family: var(--font-clash);
+	font-family: var(--font-inter);
 	color: theme("colors.neutral.200");
 	font-size: 2rem;
 	font-weight: 550;
@@ -135,7 +135,7 @@ body {
 }
 
 .impressum-text-styling > p {
-	font-family: var(--font-clash);
+	font-family: var(--font-inter);
 	color: theme("colors.neutral.400");
 	font-weight: 500;
 	font-size: 1.4rem;
@@ -146,6 +146,7 @@ body {
 	color: theme("colors.neutral.100");
 	font-size: 3.4rem;
 	margin-top: 4rem;
+	letter-spacing: 0px;
 	font-weight: 600;
 }
 
@@ -159,9 +160,11 @@ body {
 }
 
 .contact-text-styling > p {
-	font-family: var(--font-clash);
+	font-family: var(--font-inter);
 	color: theme("colors.neutral.400");
 	font-weight: 450;
+	letter-spacing: -0.6px;
+	font-weight: 500;
 	font-size: 2rem;
 }
 
