--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -118,7 +118,7 @@ body {
 }
 
 .impressum-text-styling > h1 {
-	font-family: var(--font-inter);
+	font-family: var(--font-clash);
 	color: theme("colors.neutral.100");
 	font-size: 2.4rem;
 	margin-top: 0.2rem;
@@ -127,7 +127,7 @@ body {
 }
 
 .impressum-text-styling > h2 {
-	font-family: var(--font-inter);
+	font-family: var(--font-clash);
 	color: theme("colors.neutral.200");
 	font-size: 2rem;
 	font-weight: 550;
